# scanvideo-textmode

./: .gitignore  CMakeLists.txt  README.md  coord.h  cp437.c  cp437.h  main.c  monofonts12.h  monofonts12_normal.c  text_buffer.c  text_buffer.h  text_mode.c  text_mode.h  text_mode_font.h  text_window.c  text_window.h
